--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
      <head>
-        <img src="ei.png" width="500" height="300" />
+        <img src="375198825_3349911035320179_7941823808000587506_n.jpg" width="300" height="300" />
     <title>My Resume</title>
         </head>
 <body> 
